--- a/MyBlog.WebUI/Areas/Administrator/Views/Post/Update.cshtml
+++ b/MyBlog.WebUI/Areas/Administrator/Views/Post/Update.cshtml
@@ -10,7 +10,7 @@
     </script>
 }
 <div class="admin-post">
-    <form asp-controller="Post" asp-action="Update" method="post">
+    <form asp-controller="Post" asp-action="Update" method="post" asp-antiforgery="true">
         <input asp-for="PostDto.PostId" type="hidden" />
         <div class="admin-post-input-base col-md-9">
             <div class="admin-post-input">
