Added minify states for css and js files

--- a/MyBlog.WebUI/Areas/Administrator/Views/Shared/_Layout.cshtml
+++ b/MyBlog.WebUI/Areas/Administrator/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <link href="~/node_modules/select2/dist/css/select2.min.css" rel="stylesheet" />
     <link href="~/node_modules/select2-bootstrap-theme/dist/select2-bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/styles/app.min.css" rel="stylesheet" />
-    <link href="~/Content/styles/admin-style.css" rel="stylesheet" />
+    <link href="~/Content/styles/admin-style.min.css" rel="stylesheet" />
 </head>
 <body>
     <section id="admin-users" class="admin-operations">
@@ -78,8 +78,8 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script src="~/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/node_modules/select2/dist/js/select2.full.min.js"></script>
-    <script src="~/Content/scripts/admin-select2.js"></script>
-    <script src="~/Content/scripts/admin-app.js"></script>
-    @RenderSection("scripts",false)
+    <script src="~/Content/scripts/admin-select2.min.js"></script>
+    <script src="~/Content/scripts/admin-app.min.js"></script>
+    @RenderSection("scripts", false)
 </body>
 </html>
