--- a/MyBlog.WebUI/Views/Post/Index.cshtml
+++ b/MyBlog.WebUI/Views/Post/Index.cshtml
@@ -2,12 +2,18 @@
 @{
     ViewData["Title"] = "Yazılar - Ömer ARIYÜREK";
 }
+<div>
+    @if (TempData["CommentInsertSuccessful"] != null)
+    {
+        <p>@TempData["CommentInsertSuccessful"]</p>
+    }
+</div>
 <section class="load-more">
     <h2 class="load-more--main-title">Diğer Yazılar</h2>
     @foreach (var post in Model.PostDetails)
     {
         <div class="load-more__other-post">
-            <a href="@Url.Action("Get","Post",new{@seoUrl=@post.SeoUrl})">
+            <a href="@Url.Action("Get", "Post", new {@seoUrl = @post.SeoUrl})">
                 <img src="@post.FirstImage" alt="">
                 <h2 class="load-more__other-post--title">@post.Title</h2>
             </a>
