--- a/MyBlog.WebUI/Views/Shared/_Layout.cshtml
+++ b/MyBlog.WebUI/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
     <meta name="owner" content="Ömer Arıyürek" />
     <meta name="copyright" content="(c) 2019 Ömer Arıyürek (omerariyurek.com) Tüm Hakları Saklıdır." />
     @RenderSection("metaTags", false)
-    <link href="~/Content/styles/reset.css" rel="stylesheet" />
-    <link href="~/Content/styles/style.css" rel="stylesheet" />
+    <link href="~/Content/styles/reset.min.css" rel="stylesheet" />
+    <link href="~/Content/styles/style.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
