--- a/MyBlog.WebUI/Views/Post/List.cshtml
+++ b/MyBlog.WebUI/Views/Post/List.cshtml
@@ -2,26 +2,26 @@
 @{
     ViewData["Title"] = $"{@TempData["searchPost"]} - Ömer ARIYÜREK";
 }
-    <section class="load-more">
-        <h2 class="load-more--main-title">@TempData["searchPost"] için arama sonuçları</h2>
-        @foreach (var post in Model.PostDetails)
-        {
-            <div class="load-more__other-post">
-                <a href="@Url.Action("Get","Post",new{@seoUrl=@post.SeoUrl})">
-                    <img src="@post.FirstImage" alt="">
-                    <h2 class="load-more__other-post--title">@post.Title</h2>
-                </a>
-                <ul class="load-more__other-post--date-category">
-                    <li class="date">@post.CreatedDate.ToString("MM/dd/yyyy")</li>
-                    <li class="hyphen">-</li>
-                    <li class="category">
-                        @foreach (var category in post.PostCategories)
-                        {
-                            <a href="@Url.Action("CategoryPosts", "Category", new {@seoUrl = category.SeoUrl})">@category.CategoryName</a>
-                        }
-                    </li>
-                </ul>
-            </div>
-        }
-        <post-all-paging page-size="@Model.PageSize" page-count="@Model.PageCount" current-page="@Model.CurrentPage" search-post="@Model.SearchKey"></post-all-paging>
-    </section>
+<section class="load-more">
+    <h2 class="load-more--main-title">@TempData["searchPost"] için arama sonuçları</h2>
+    @foreach (var post in Model.PostDetails)
+    {
+        <div class="load-more__other-post">
+            <a href="@Url.Action("Get","Post",new{@seoUrl=@post.SeoUrl})" title="@post.Title">
+                <img src="@post.FirstImage" alt="@post.Title" title="@post.MetaDescription">
+                <h2 class="load-more__other-post--title">@post.Title</h2>
+            </a>
+            <ul class="load-more__other-post--date-category">
+                <li class="date">@post.CreatedDate.ToString("MM/dd/yyyy")</li>
+                <li class="hyphen">-</li>
+                <li class="category">
+                    @foreach (var category in post.PostCategories)
+                    {
+                        <a href="@Url.Action("CategoryPosts", "Category", new {@seoUrl = category.SeoUrl})" title="@category.CategoryName">@category.CategoryName</a>
+                    }
+                </li>
+            </ul>
+        </div>
+    }
+    <post-all-paging page-size="@Model.PageSize" page-count="@Model.PageCount" current-page="@Model.CurrentPage" search-post="@Model.SearchKey"></post-all-paging>
+</section>
