--- a/MyBlog.WebUI/Views/Post/Get.cshtml
+++ b/MyBlog.WebUI/Views/Post/Get.cshtml
@@ -6,6 +6,10 @@
 {
     <meta name="description" content="@Model.PostDetail.MetaDescription" />
     <meta name="keywords" content="@Model.PostDetail.MetaKeywords" />
+    <meta property="og:title" content="@ViewData["Title"]">
+    <meta property="og:image" content="@Model.PostDetail.CoverImage" />
+    <meta property="og:url" content="https://www.omerariyurek.com/post/@Model.PostDetail.SeoUrl">
+    <meta property="og:description" content="@Model.PostDetail.MetaDescription" />
 }
 @section scripts
 {
@@ -14,12 +18,16 @@
     <script src="~/node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
 }
 <section class="post-content">
+    @if (TempData["CommentInsertSuccessful"] != null)
+    {
+        <span class="post-content__comment-successfully">@TempData["CommentInsertSuccessful"]</span>
+    }
     <h2 class="post-content__title">@Model.PostDetail.Title</h2>
     <ul class="post-content__info-list">
         <li>
             @foreach (var category in Model.PostDetail.PostCategories)
             {
-                <a href="@Url.Action("CategoryPosts","Category",new{@seoUrl=category.SeoUrl})">@category.CategoryName</a>
+                <a href="@Url.Action("CategoryPosts", "Category", new {@seoUrl = category.SeoUrl})" title="@category.CategoryName">@category.CategoryName</a>
             }
         </li>
         <li class="hyphen">-</li>
@@ -29,7 +37,7 @@
         </li>
     </ul>
     <div class="post-content__content">
-        <img src="@Model.PostDetail.FirstImage" class="post-content__main-photo" alt="@Model.PostDetail.MetaKeywords" title="@Model.PostDetail.Title">
+        <img src="@Model.PostDetail.FirstImage" class="post-content__main-photo" alt="@Model.PostDetail.Title" title="@Model.PostDetail.Title">
         <div class="post-content__content--content-txt">
             @Html.Raw(Model.PostDetail.Content)
         </div>
@@ -37,7 +45,7 @@
     <div class="post-content__category-tag">
         @foreach (var tag in Model.PostTags)
         {
-            <a href="@Url.Action("TagPosts","Tag",new{@seoUrl=tag.SeoUrl})">@tag.TagName</a>
+            <a href="@Url.Action("TagPosts", "Tag", new {@seoUrl = tag.SeoUrl})">@tag.TagName</a>
         }
     </div>
     <div class="post-content__related-post">
@@ -46,9 +54,9 @@
             @foreach (var post in Model.RandomTwoPosts)
             {
                 <li class="post-content__related-post--list-item">
-                    <a href="@Url.Action("Get","Post",new{@seoUrl=post.SeoUrl})">
+                    <a href="@Url.Action("Get", "Post", new {@seoUrl = post.SeoUrl})" title="@post.Title">
                         <div class="img-and-tag">
-                            <img src="@post.CoverImage" alt="@post.MetaKeywords" title="@post.Title">
+                            <img src="@post.CoverImage" alt="@post.Title" title="@post.Title">
                         </div>
                         <h5 class="post-content__related-post--related-list--title">@post.Title</h5>
                     </a>
@@ -95,7 +103,7 @@
                 <input asp-for="Comment.ParentComment" type="hidden" id="parent-comment-id" />
                 <label>Yorumunuz</label>
                 <textarea style="resize: none;" asp-for="Comment.Content"></textarea>
-                <span style="float:left;width: 100%;" asp-validation-for="Comment.Content"></span>
+                <span style="float: left; width: 100%;" asp-validation-for="Comment.Content"></span>
                 <div class="small">
                     <label>Adınız Soyadınız</label>
                     <input asp-for="Comment.AuthorName" class="customer-name">
