--- a/MyBlog.WebUI/Views/Shared/_Layout.cshtml
+++ b/MyBlog.WebUI/Views/Shared/_Layout.cshtml
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"]</title>
+    <link rel="shortcut icon" type="image/png" href="@Url.Content("~/Content/images/favicon.ico")" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="index, follow" />
     <meta name="author" content="Ömer Arıyürek" />
     <meta name="owner" content="Ömer Arıyürek" />
     <meta name="copyright" content="(c) 2019 Ömer Arıyürek (omerariyurek.com) Tüm Hakları Saklıdır." />
