Added new configurations

--- a/MyBlog.WebUI/Areas/Administrator/Views/Post/Update.cshtml
+++ b/MyBlog.WebUI/Areas/Administrator/Views/Post/Update.cshtml
@@ -7,6 +7,8 @@
     <script>
         CKEDITOR.replace("PostDto.Content");
         CKEDITOR.config.height = 515;
+        config.extraPlugins = 'embedbase';
+        config.extraPlugins = 'embed';
     </script>
 }
 <div class="admin-post">
