Added new configurations

--- a/MyBlog.WebUI/Views/Home/Index.cshtml
+++ b/MyBlog.WebUI/Views/Home/Index.cshtml
@@ -1,16 +1,16 @@
 ﻿@model MyBlog.WebUI.Models.ViewModels.HomeIndexViewModel
 @{
-    ViewData["Title"] = "Ömer ARIYÜREK - .NET Developer";
+    ViewData["Title"] = "Ömer ARIYÜREK - Software Developer";
 }
 @section metaTags
 {
     <link rel="canonical" href="https://www.omerariyurek.com/" />
-    <meta name="description" content="Ömer Arıyürek .NET Developer,C#,ASP.NET Core MVC,.NET Core,.NET,ASP.NET MVC,Entity Framework,Design Patterns,ASP.NET Core Web Api,Object Oriented Programming,Solid Principles hakkında yazılar" />
-    <meta name="keywords" content="Ömer Arıyürek,C#,ASP.NET CORE,.NET Core,.NET,Entity Framework,C#,ASP.NET CORE MVC,.NET Core,.NET,Entity Framework,Design Patterns,ASP.NET MVC,ASP.NET Core Web Api,Solid Principles" />
+    <meta name="description" content="Ömer Arıyürek Software Developer,.NET Developer,C#,ASP.NET Core MVC,.NET Core,.NET,ASP.NET MVC,Entity Framework,Design Patterns,ASP.NET Core Web Api,Object Oriented Programming,Solid Principles hakkında yazılar" />
+    <meta name="keywords" content="Ömer Arıyürek,Software Developer,.NET Developer,C#,ASP.NET CORE,.NET Core,.NET,Entity Framework,C#,ASP.NET CORE MVC,.NET Core,.NET,Entity Framework,Design Patterns,ASP.NET MVC,ASP.NET Core Web Api,Solid Principles" />
     <meta property="og:image" content="@Url.Content("~/assets/images/pp.jpg")"/>
     <meta property="og:title" content="@ViewData["Title"]">
     <meta property="og:url" content="https://www.omerariyurek.com">
-    <meta property="og:description" content="Ömer Arıyürek .NET Developer,C#,ASP.NET Core MVC,.NET Core,.NET,ASP.NET MVC,Entity Framework,Design Patterns,ASP.NET Core Web Api,Object Oriented Programming,Solid Principles hakkında yazılar" />
+    <meta property="og:description" content="Ömer Arıyürek Software Developer,.NET Developer,C#,ASP.NET Core MVC,.NET Core,.NET,ASP.NET MVC,Entity Framework,Design Patterns,ASP.NET Core Web Api,Object Oriented Programming,Solid Principles hakkında yazılar" />
 }
 <section class="homepage-content">
     <div class="homepage-content__about-me">
@@ -19,7 +19,7 @@
             <span class="homepage-content__about-txt--hello">Merhaba! Ben</span>
             <h1 class="homepage-content__about-txt--name">Ömer Arıyürek</h1>
             <p class="homepage-content__about-txt--about-content">
-                Yazılım ile lise yıllarımda bilişim teknolojileri bölümünde okurken tanıştım. Daha sonrasında üniversitede bilgisayar programcılığı bölümünü bitirdim. Yaklaşık 5 senedir kod yazmakla birlikte bilgilerime yenilerini eklemekteyim. Ağırlıklı olarak Microsoft teknolojileriyle ilgilenmekteyim. Blogumda elimden geldiğince bildiklerim ve öğrendiğim teknolojiler hakkında yazılar yazmaya çalışacağım...
+                Yazılım ile lise yıllarımda bilişim teknolojileri bölümünde okurken tanıştım. Daha sonrasında üniversitede bilgisayar programcılığı bölümünü bitirdim. Yaklaşık 5 senedir kod yazmakla birlikte bilgilerime yenilerini eklemekteyim. Ağırlıklı olarak Microsoft teknolojileriyle ilgileniyorum. Blogumda elimden geldiğince bildiklerim ve öğrendiğim teknolojiler hakkında yazılar yazmaya çalışacağım...
             </p>
         </div>
         <div class="homepage-content__about-me--background-image"></div>
